log
Wed 10 May 2023 12:28:40 AM UTC: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
84f7f8a
Wed 10 May 2023 12:28:55 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
053ce65
Wed 10 May 2023 12:29:41 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:14: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[3]’ [-Werror=array-bounds]
   40 |     nuevoHeap->capac=3;
      |              ^~
heap.c:38:28: note: referencing an object of size 3 allocated by ‘malloc’
   38 |     Heap* nuevoHeap=(Heap*)malloc(3);
      |                            ^~~~~~~~~
heap.c:41:14: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[3]’ [-Werror=array-bounds]
   41 |     nuevoHeap->size=0;
      |              ^~
heap.c:38:28: note: referencing an object of size 3 allocated by ‘malloc’
   38 |     Heap* nuevoHeap=(Heap*)malloc(3);
      |                            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
391b0e4
Wed 10 May 2023 12:30:14 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:14: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[4]’ [-Werror=array-bounds]
   40 |     nuevoHeap->capac=3;
      |              ^~
heap.c:38:28: note: referencing an object of size 4 allocated by ‘malloc’
   38 |     Heap* nuevoHeap=(Heap*)malloc(sizeof(3));
      |                            ^~~~~~~~~~~~~~~~~
heap.c:41:14: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[4]’ [-Werror=array-bounds]
   41 |     nuevoHeap->size=0;
      |              ^~
heap.c:38:28: note: referencing an object of size 4 allocated by ‘malloc’
   38 |     Heap* nuevoHeap=(Heap*)malloc(sizeof(3));
      |                            ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5a133a6
Wed 10 May 2023 12:30:30 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f7df50a
Wed 10 May 2023 12:31:48 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
1423442
Wed 10 May 2023 12:32:28 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
1b7a3ca
Wed 10 May 2023 12:33:02 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
502d623
Wed 10 May 2023 12:35:12 AM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:34:25: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   34 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:33:6: note: declared here
   33 | void heap_pop(Heap* pq){
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
31d9ba1
